fixed image sizing that was resulting in horizontal scrolling

--- a/project1.css
+++ b/project1.css
@@ -43,6 +43,7 @@
 
 .intro-text {
 	text-align: center;
+	padding-top: 100px;
 }
 
 .intro1 {
@@ -77,7 +78,6 @@
 .about-image {
 	padding-top: 150px;
 	padding-left: 40px;
-	width: 40%;
 	flex-direction: column;
 }
 
@@ -192,7 +192,20 @@ body {
 		gap: 20px;		
 	}
 	.navbar {
-justify-content: start;	
+		justify-content: start;
+	}
+	.navbar a {
+		width: 25%;
+	}
+	.intro-image img {
+			height: 100px;
+			left: 20px;
+	}
+	.intro-text, .intro1 {
+		text-size: 4rem;
+	}
+	.intro2 {
+		text-size: 2rem;
 	}
 	.about-text {
 		width: 100%;
@@ -205,9 +218,6 @@ justify-content: start;
 		flex-direction: column;
 		width: 100%;
 	}
-	.intro-image img {
-			height: 100px;
-			left: 20px;
-	}
+
 }
 
